--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@effuse/core",
+	"name": "@effuse/i18n",
 	"version": "0.1.0",
-	"description": "The core library for Effuse. It provides the reactive Signals engine and the lightweight DOM renderer, serving as the foundation for building interactive interfaces.",
+	"description": "The official internationalization library for Effuse.",
 	"author": "Chris M. Pérez",
 	"license": "MIT",
 	"repository": {
@@ -26,26 +26,6 @@
 				"types": "./dist/index.d.cts",
 				"default": "./dist/index.cjs"
 			}
-		},
-		"./jsx-runtime": {
-			"import": {
-				"types": "./dist/jsx-runtime.d.ts",
-				"default": "./dist/jsx-runtime.js"
-			},
-			"require": {
-				"types": "./dist/jsx-runtime.d.cts",
-				"default": "./dist/jsx-runtime.cjs"
-			}
-		},
-		"./jsx-dev-runtime": {
-			"import": {
-				"types": "./dist/jsx-runtime.d.ts",
-				"default": "./dist/jsx-runtime.js"
-			},
-			"require": {
-				"types": "./dist/jsx-runtime.d.cts",
-				"default": "./dist/jsx-runtime.cjs"
-			}
 		}
 	},
 	"files": [
@@ -59,30 +39,33 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"keywords": [
-		"ui-library",
+		"i18n",
+		"internationalization",
+		"localization",
+		"translation",
+		"effuse",
+		"typescript",
+		"type-safe",
 		"reactive",
 		"signals",
-		"lightweight",
-		"no-vdom",
-		"typescript",
-		"effect-ts",
-		"effuse"
+		"intl"
 	],
 	"engines": {
 		"node": ">=23.0.0"
 	},
-	"packageManager": "pnpm@10.26.2",
+	"peerDependencies": {
+		"@effuse/core": "workspace:*"
+	},
 	"dependencies": {
 		"effect": "^3.19.13"
 	},
 	"devDependencies": {
 		"@effect/eslint-plugin": "^0.3.2",
 		"@types/node": "^25.0.3",
+		"@effuse/core": "workspace:*",
 		"eslint": "^9.39.2",
-		"jsdom": "^27.3.0",
 		"tsup": "^8.5.1",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.50.1",
 		"vitest": "^4.0.16"
 	}
 }
