--- a/app/public/locales/ja.json
+++ b/app/public/locales/ja.json
@@ -24,7 +24,8 @@
 		"form": "フォーム",
 		"todos": "Todoアプリ",
 		"props": "Props (プロパティ)",
-		"i18n": "国際化"
+		"i18n": "国際化",
+		"emit": "Emit"
 	},
 	"toc": {
 		"onThisPage": "このページの内容"
@@ -46,7 +47,14 @@
 		"role": "作成者 @ Effuse",
 		"location": "New York, USA ⇄ Puerto Rico",
 		"languages": "英語, スペイン語",
-		"projects": ["core", "i18n", "ink", "query", "router", "store"],
+		"projects": [
+			"core",
+			"i18n",
+			"ink",
+			"query",
+			"router",
+			"store"
+		],
 		"focusTitle": "現在の注力分野",
 		"meta": {
 			"title": "私について - Effuse",
@@ -159,6 +167,24 @@
 			"summary": "こんにちは {{name}} さん、あなたは {{project}} v{{version}} を構築しています — 現代的な i18n への素晴らしい旅です！",
 			"yourName": "あなたの名前:",
 			"footer": "Effuse と @effuse/i18n で構築"
+		},
+		"emit": {
+			"title": "イベントエミット",
+			"description": "リアクティブ信号をサポートするイベントエミッター",
+			"placeholder": "メッセージを入力...",
+			"send": "送信",
+			"actingAs": "実行ユーザー:",
+			"stats": {
+				"messages": "メッセージ",
+				"emits": "エミット数",
+				"online": "オンライン"
+			},
+			"reset": "リセット",
+			"noMessages": "まだメッセージはありません。入力を開始してください！",
+			"howItWorks": "仕組み",
+			"mention": "メンション",
+			"sessionStarted": "セッションを開始しました。イベントエミッターの準備が整いました！",
+			"switchedTo": "{{user}} に切り替えました"
 		}
 	},
 	"legal": {
