--- a/app/public/locales/zh.json
+++ b/app/public/locales/zh.json
@@ -24,7 +24,8 @@
 		"form": "表单处理",
 		"todos": "待办事项",
 		"props": "Props 传参",
-		"i18n": "国际化"
+		"i18n": "国际化",
+		"emit": "Emit"
 	},
 	"toc": {
 		"onThisPage": "本页目录"
@@ -46,7 +47,14 @@
 		"role": "Effuse 创始人",
 		"location": "美国纽约 ⇄ 波多黎各",
 		"languages": "英语, 西班牙语",
-		"projects": ["core", "i18n", "ink", "query", "router", "store"],
+		"projects": [
+			"core",
+			"i18n",
+			"ink",
+			"query",
+			"router",
+			"store"
+		],
 		"focusTitle": "当前聚焦",
 		"meta": {
 			"title": "关于我 - Effuse",
@@ -159,6 +167,24 @@
 			"summary": "你好 {{name}}，你正在构建 {{project}} v{{version}} — 现代 i18n 的奇妙旅程！",
 			"yourName": "你的名字：",
 			"footer": "使用 Effuse 和 @effuse/i18n 构建"
+		},
+		"emit": {
+			"title": "事件发送",
+			"description": "支持响应式信号的事件发射器",
+			"placeholder": "输入消息...",
+			"send": "发送",
+			"actingAs": "当前身份:",
+			"stats": {
+				"messages": "消息数",
+				"emits": "发送次数",
+				"online": "在线人数"
+			},
+			"reset": "重置",
+			"noMessages": "暂无消息。开始输入吧！",
+			"howItWorks": "工作原理",
+			"mention": "提及",
+			"sessionStarted": "会话已开始。事件发射器就绪！",
+			"switchedTo": "已切换至 {{user}}"
 		}
 	},
 	"legal": {
