docs: add multi-language documentation for event emission and update sidebar navigation and i18n keys.
ref: #4

--- a/app/public/locales/en.json
+++ b/app/public/locales/en.json
@@ -25,7 +25,8 @@
 		"todos": "Todos",
 		"props": "Props",
 		"i18n": "I18n",
-		"emit": "Emit"
+		"emit": "Emit Example",
+		"events": "Event Emission"
 	},
 	"toc": {
 		"onThisPage": "On this page"
