--- a/app/public/locales/es.json
+++ b/app/public/locales/es.json
@@ -25,8 +25,8 @@
 		"todos": "Tareas",
 		"props": "Propiedades",
 		"i18n": "I18n",
-		"emit": "Ejemplo Emit",
-		"events": "Emisión de Eventos"
+		"emit": "Emit",
+		"events": "Emit"
 	},
 	"toc": {
 		"onThisPage": "En esta página"
@@ -48,7 +48,14 @@
 		"role": "Creador @ Effuse",
 		"location": "New York, USA ⇄ Puerto Rico",
 		"languages": "Inglés, Español",
-		"projects": ["core", "i18n", "ink", "query", "router", "store"],
+		"projects": [
+			"core",
+			"i18n",
+			"ink",
+			"query",
+			"router",
+			"store"
+		],
 		"focusTitle": "Enfoque Activo",
 		"meta": {
 			"title": "Sobre Mí - Effuse",
@@ -163,7 +170,7 @@
 			"footer": "Construido con Effuse y @effuse/i18n"
 		},
 		"emit": {
-			"title": "Emisión de Eventos",
+			"title": "Emit",
 			"description": "Emisor de eventos con soporte de señales reactivas",
 			"placeholder": "Escribe un mensaje...",
 			"send": "Enviar",
