--- a/app/public/locales/zh.json
+++ b/app/public/locales/zh.json
@@ -25,8 +25,8 @@
 		"todos": "待办事项",
 		"props": "Props 传参",
 		"i18n": "国际化",
-		"emit": "Emit 示例",
-		"events": "事件发送"
+		"emit": "Emit",
+		"events": "Emit"
 	},
 	"toc": {
 		"onThisPage": "本页目录"
@@ -48,7 +48,14 @@
 		"role": "Effuse 创始人",
 		"location": "美国纽约 ⇄ 波多黎各",
 		"languages": "英语, 西班牙语",
-		"projects": ["core", "i18n", "ink", "query", "router", "store"],
+		"projects": [
+			"core",
+			"i18n",
+			"ink",
+			"query",
+			"router",
+			"store"
+		],
 		"focusTitle": "当前聚焦",
 		"meta": {
 			"title": "关于我 - Effuse",
@@ -163,7 +170,7 @@
 			"footer": "使用 Effuse 和 @effuse/i18n 构建"
 		},
 		"emit": {
-			"title": "事件发送",
+			"title": "Emit",
 			"description": "支持响应式信号的事件发射器",
 			"placeholder": "输入消息...",
 			"send": "发送",
