--- a/app/public/locales/es.json
+++ b/app/public/locales/es.json
@@ -48,14 +48,7 @@
 		"role": "Creador @ Effuse",
 		"location": "New York, USA ⇄ Puerto Rico",
 		"languages": "Inglés, Español",
-		"projects": [
-			"core",
-			"i18n",
-			"ink",
-			"query",
-			"router",
-			"store"
-		],
+		"projects": ["core", "i18n", "ink", "query", "router", "store", "compiler"],
 		"focusTitle": "Enfoque Activo",
 		"meta": {
 			"title": "Sobre Mí - Effuse",
