--- a/app/public/locales/en.json
+++ b/app/public/locales/en.json
@@ -14,6 +14,8 @@
 		"coreConceptsTitle": "Core Concepts",
 		"components": "Components",
 		"reactivity": "Reactivity",
+		"hooks": "Hooks",
+		"layers": "Layers",
 		"lifecycle": "Lifecycle",
 		"advancedTitle": "Advanced",
 		"routing": "Routing",
@@ -48,7 +50,15 @@
 		"role": "Creator @ Effuse",
 		"location": "New York, USA ⇄ Puerto Rico",
 		"languages": "English, Spanish",
-		"projects": ["core", "i18n", "ink", "query", "router", "store", "compiler"],
+		"projects": [
+			"core",
+			"i18n",
+			"ink",
+			"query",
+			"router",
+			"store",
+			"compiler"
+		],
 		"focusTitle": "Active Focus",
 		"meta": {
 			"title": "About Me - Effuse",
