--- a/app/public/locales/ja.json
+++ b/app/public/locales/ja.json
@@ -14,6 +14,8 @@
 		"coreConceptsTitle": "コアコンセプト",
 		"components": "コンポーネント",
 		"reactivity": "リアクティビティ",
+		"hooks": "フック",
+		"layers": "レイヤー",
 		"lifecycle": "ライフサイクル",
 		"advancedTitle": "高度な機能",
 		"routing": "ルーティング",
@@ -48,7 +50,15 @@
 		"role": "作成者 @ Effuse",
 		"location": "New York, USA ⇄ Puerto Rico",
 		"languages": "英語, スペイン語",
-		"projects": ["core", "i18n", "ink", "query", "router", "store", "compiler"],
+		"projects": [
+			"core",
+			"i18n",
+			"ink",
+			"query",
+			"router",
+			"store",
+			"compiler"
+		],
 		"focusTitle": "現在の注力分野",
 		"meta": {
 			"title": "私について - Effuse",
