--- a/app/public/locales/zh.json
+++ b/app/public/locales/zh.json
@@ -14,6 +14,8 @@
 		"coreConceptsTitle": "核心概念",
 		"components": "组件",
 		"reactivity": "响应式原理",
+		"hooks": "钩子",
+		"layers": "层",
 		"lifecycle": "生命周期",
 		"advancedTitle": "高级功能",
 		"routing": "路由管理",
@@ -48,7 +50,15 @@
 		"role": "Effuse 创始人",
 		"location": "美国纽约 ⇄ 波多黎各",
 		"languages": "英语, 西班牙语",
-		"projects": ["core", "i18n", "ink", "query", "router", "store", "compiler"],
+		"projects": [
+			"core",
+			"i18n",
+			"ink",
+			"query",
+			"router",
+			"store",
+			"compiler"
+		],
 		"focusTitle": "当前聚焦",
 		"meta": {
 			"title": "关于我 - Effuse",
