--- a/app/public/locales/en.json
+++ b/app/public/locales/en.json
@@ -50,15 +50,7 @@
 		"role": "Creator @ Effuse",
 		"location": "New York, USA ⇄ Puerto Rico",
 		"languages": "English, Spanish",
-		"projects": [
-			"core",
-			"i18n",
-			"ink",
-			"query",
-			"router",
-			"store",
-			"compiler"
-		],
+		"projects": ["core", "i18n", "ink", "query", "router", "store", "compiler"],
 		"focusTitle": "Active Focus",
 		"meta": {
 			"title": "About Me - Effuse",
