feat: Add tagged error documentation and update docs navigation and i18n files.

--- a/app/public/locales/en.json
+++ b/app/public/locales/en.json
@@ -28,7 +28,8 @@
 		"props": "Props",
 		"i18n": "I18n",
 		"emit": "Emit",
-		"events": "Emit"
+		"events": "Emit",
+		"errorHandling": "Error Handling"
 	},
 	"toc": {
 		"onThisPage": "On this page"
