--- a/app/public/locales/ja.json
+++ b/app/public/locales/ja.json
@@ -37,6 +37,22 @@
 	"footer": {
 		"builtWith": "Effuse で構築"
 	},
+	"search": {
+		"placeholder": "ドキュメントを検索...",
+		"startTyping": "入力して検索を開始",
+		"searchAcross": "すべてのドキュメントを検索",
+		"noResults": "結果が見つかりません",
+		"tryDifferent": "別の検索語を試してください",
+		"toNavigate": "で移動",
+		"toSelect": "で選択",
+		"poweredBy": "Effuse Search",
+		"documentation": "ドキュメント",
+		"resultCode": "コード",
+		"resultTitle": "タイトル",
+		"resultSection": "セクション",
+		"poweredByPrefix": "Powered by",
+		"poweredBySuffix": "Effuse Search"
+	},
 	"about": {
 		"title": "チーム紹介",
 		"description": "Effuseは、リアクティブなWebアプリケーションの未来を築くことに専念する開発者のコミュニティによって支えられています。エコシステムを形成するコントリビューターを以下に紹介します。",
